--- a/frontend/agendapp/src/app/components/registro/registro.component.html
+++ b/frontend/agendapp/src/app/components/registro/registro.component.html
@@ -72,7 +72,7 @@
         >
           <div class="d-flex flex-row mt-3">
             <input
-              class="btn btn-primary btn-lg rounded-pill mb-3"
+              class="btn btn-primary btn-lg rounded-pill mb-3 px-5"
               type="submit"
               value="Registrarme"
             />
@@ -190,7 +190,7 @@
         >
           <div class="d-flex flex-row mt-3">
             <input
-              class="btn btn-primary btn-lg rounded-pill mb-3"
+              class="btn btn-primary btn-lg rounded-pill mb-3 px-5"
               type="submit"
               value="Registrarme"
             />
