footer de cada modulo terminado, iconos de app

--- a/frontend/agendapp/src/app/components/login/login.component.css
+++ b/frontend/agendapp/src/app/components/login/login.component.css
@@ -16,9 +16,10 @@ input::placeholder{
 }
 
 a{
-    color: #101113;    
+    color: #101113;   
 }
 
 span{
     font-weight: bold;
+    text-decoration: underline;
 }
