--- a/frontend/agendapp/src/app/shared/footer/footer.component.html
+++ b/frontend/agendapp/src/app/shared/footer/footer.component.html
@@ -1,1 +1,129 @@
-<p>footer works!</p>
+@if(section){
+<section>
+  <nav
+    class="navbar navbar-expand-lg d-flex py-3 fixed-bottom position-absolute"
+  >
+    @if(section === 'home_usuarios'){ 
+      <ul class="d-flex flex-row justify-content-around align-items-center">
+      <li>
+        <a routerLink="/home_usuarios" class="border">
+          <img
+            src="../../../assets/img/home.svg"
+            alt=""
+            class="border m-0 p-0"
+          />
+        </a>
+      </li>
+      <li>
+        <a routerLink="/" class="border">
+          <img
+            src="../../../assets/img/calendar.svg"
+            alt=""
+            class="border m-0 p-0"
+          />
+        </a>
+      </li>
+      <li>
+        <a routerLink="/" class="border">
+          <img
+            src="../../../assets/img/specialties.svg"
+            alt=""
+            class="border m-0 p-0"
+          />
+        </a>
+      </li>
+      <li>
+        <a routerLink="/" class="border">
+          <img
+            src="../../../assets/img/logout.svg"
+            alt="icono_salir"
+            title="Salir"            
+          />
+        </a>
+      </li>
+    </ul>
+    } @else if(section === 'home_medicos'){
+      <ul class="d-flex flex-row justify-content-around align-items-center">
+      <li>
+        <a routerLink="/dashboard" class="border">
+          <img
+            src="../../../assets/img/home.svg"
+            alt=""
+            class="border m-0 p-0"
+          />
+        </a>
+      </li>
+      <li>
+        <a routerLink="/dashboard" class="border">
+          <img
+            src="../../../assets/img/list-solid.svg"
+            alt=""
+            class="border m-0 p-0"
+          />
+        </a>
+      </li>
+      <li>
+        <a routerLink="/dashboard" class="border">
+          <img
+            src="../../../assets/img/inbox.svg"
+            alt=""
+            class="border m-0 p-0"
+          />
+        </a>
+      </li>
+      <li>
+        <a routerLink="/dashboard" class="border">
+          <img
+            src="../../../assets/img/logout.svg"
+            alt="icono_salir"
+            title="Salir"            
+          />
+        </a>
+      </li>
+    </ul>
+     }
+    @else if(section === 'dashboard'){
+    <ul class="d-flex flex-row justify-content-around align-items-center">
+      <li>
+        <a routerLink="/dashboard" class="border">
+          <img
+            src="../../../assets/img/home.svg"
+            alt=""
+            class="border m-0 p-0"
+          />
+        </a>
+      </li>
+      <li>
+        <a routerLink="/dashboard" class="border">
+          <img
+            src="../../../assets/img/search-folder.svg"
+            alt=""
+            class="border m-0 p-0"
+          />
+        </a>
+      </li>
+      <li>
+        <a routerLink="/dashboard" class="border">
+          <img
+            src="../../../assets/img/inbox.svg"
+            alt=""
+            class="border m-0 p-0"
+          />
+        </a>
+      </li>
+      <li>
+        <a routerLink="/dashboard" class="border">
+          <img
+            src="../../../assets/img/logout.svg"
+            alt="icono_salir"
+            title="Salir"            
+          />
+        </a>
+      </li>
+    </ul>
+    } @else{
+    <p>Error</p>
+    }
+  </nav>
+</section>
+}
