--- a/frontend/agendapp/src/app/shared/footer/footer.component.html
+++ b/frontend/agendapp/src/app/shared/footer/footer.component.html
@@ -45,7 +45,7 @@
     } @else if(section === 'home_medicos'){
       <ul class="d-flex flex-row justify-content-around align-items-center">
       <li>
-        <a routerLink="/dashboard" class="border">
+        <a routerLink="/home_medicos" class="border">
           <img
             src="../../../assets/img/home.svg"
             alt=""
@@ -54,7 +54,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/dashboard" class="border">
+        <a routerLink="/" class="border">
           <img
             src="../../../assets/img/list-solid.svg"
             alt=""
@@ -63,7 +63,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/dashboard" class="border">
+        <a routerLink="/" class="border">
           <img
             src="../../../assets/img/inbox.svg"
             alt=""
@@ -72,7 +72,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/dashboard" class="border">
+        <a routerLink="/" class="border">
           <img
             src="../../../assets/img/logout.svg"
             alt="icono_salir"
@@ -94,7 +94,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/dashboard" class="border">
+        <a routerLink="/" class="border">
           <img
             src="../../../assets/img/search-folder.svg"
             alt=""
@@ -103,7 +103,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/dashboard" class="border">
+        <a routerLink="/" class="border">
           <img
             src="../../../assets/img/inbox.svg"
             alt=""
@@ -112,7 +112,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/dashboard" class="border">
+        <a routerLink="/" class="border">
           <img
             src="../../../assets/img/logout.svg"
             alt="icono_salir"
