--- a/frontend/agendapp/src/styles.css
+++ b/frontend/agendapp/src/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 /* You can add global styles to this file, and also import other style files */
 *,
 *::before,
@@ -5,10 +6,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
   background-color: #f5f5f5;
 }
 
