modulo usuario parcialmente terminado (sin validar) uso del localstorage y json server

--- a/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.html
+++ b/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.html
@@ -7,8 +7,8 @@
 
     <div
       class="container botones d-flex flex-column justify-content-center align-items-center position-absolute bottom-0 mb-4">
-      <button class="btn btn-primary btn-lg rounded-pill mb-3 px-5" type="button" title="Registrame" routerLink="registro_usuarios">Registrarme</button>
-      <button class="btn btn-outline-dark btn-lg rounded-pill px-5" type="button" title="Iniciar sesion" routerLink="login_usuarios">Iniciar Sesión</button>
+      <button class="btn btn-outline-primary bg-primary text-dark btn-lg rounded-pill mb-3 px-5" type="button" title="Registrame" [routerLink]="['/registro_usuarios']">Registrarme</button>
+      <button class="btn btn-outline-dark btn-lg rounded-pill px-5" type="button" title="Iniciar sesion" [routerLink]="['/login_usuarios']">Iniciar Sesión</button>
     </div>
   </div>
 </section>
