--- a/frontend/agendapp/src/app/shared/navbar/navbar.component.html
+++ b/frontend/agendapp/src/app/shared/navbar/navbar.component.html
@@ -11,21 +11,22 @@
       'navbar-login-medico': section === 'login_medicos'
     }"
   >
-    <a routerLink="">
+    <a [routerLink]="['/']">
       <img
-        class="ms-4"
+        class="ms-4 caret"
         src="../../../assets/img/caret_back.png"
         alt="icono_regresar"
+        title="Volver a la página principal"
       />
     </a>
     @if(section === 'registro_usuarios'){
-    <h2 class="ms-5">Nueva Cuenta</h2>
+    <h2 class="mx-auto">Nueva Cuenta</h2>
     } @else if(section === 'registro_medicos'){
-    <h2 class="ms-5">Nueva Cuenta</h2>
+    <h2 class="mx-auto">Nueva Cuenta</h2>
     }@else if(section === 'login_usuarios'){
-    <h2 class="ms-5">Inicio de Sesión</h2>
+    <h2 class="mx-auto">Inicio de Sesión</h2>
     }@else if(section === 'login_medicos'){
-    <h2 class="ms-5">Inicio de Sesión</h2>
+    <h2 class="mx-auto">Inicio de Sesión</h2>
     }
   </nav>
 
