--- a/frontend/agendapp/src/app/components/modulo-usuario/modulo-usuario.component.css
+++ b/frontend/agendapp/src/app/components/modulo-usuario/modulo-usuario.component.css
@@ -1,9 +1,8 @@
-.navbar {
-  background-color: #d2ebfa;
-}
-
-div.container-fluid {
-  padding: 0.1rem 0.5rem;
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 2rem 0px;
 }
 
 a.cta {
@@ -21,12 +20,6 @@ a.cta {
   box-shadow: 1px 5px 4px #05657d, -1px -5px 0px #0bc9f9;
 }
 
-
-div.container-slider {
-  margin-top: 1rem;
-  max-height: 14rem;
-}
-
 div.carousel-item {
   width: 100%;
   height: 14rem;
@@ -40,16 +33,13 @@ img {
   padding: 0.5rem;
 }
 
-.logo {
-  width: 70px;
-}
-
 .fraseBienvenida > h2 {
   display: flex;
   justify-content: start;
   align-items: center;
   font-weight: bold;
-  line-height: normal;
+  background-color: #f5f5f5;
+  margin-top: 1rem;
 }
 
 .titulos > h2 {
@@ -81,20 +71,43 @@ img {
   width: 85px;
 }
 
-
-.doctor{
+.doctor {
   width: 70px;
 }
 
-.card{
+.card {
   border-radius: 18px;
 }
 
-h5{
-  font-weight: 900;
-
+.card:hover {
+  background-color: #3332;
 }
 
-small{
+.card-touch {
+  z-index: 1;
+  width: 18rem;
+  height: 7rem;
+}
+
+h5 {
+  font-weight: 900;
+}
+
+small {
   font-weight: 700;
 }
+
+
+div.container-fluid {
+  padding: 0.1rem 0.5rem;
+}
+
+
+img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 26px;
+  padding: 0.5rem;
+}
+
