--- a/frontend/agendapp/src/app/shared/footer/footer.component.html
+++ b/frontend/agendapp/src/app/shared/footer/footer.component.html
@@ -1,12 +1,11 @@
-@if(section){
-<section>
+  @if(section){
   <nav
-    class="navbar navbar-expand-lg d-flex py-3 fixed-bottom position-absolute"
+    class="navbar navbar-expand-lg d-flex py-3 position-sticky"
   >
-    @if(section === 'home_usuarios'){ 
+    @if(section === 'home_usuario' || section === 'mis_turnos' || section === 'especialidades' || section === 'turno' ){ 
       <ul class="d-flex flex-row justify-content-around align-items-center">
       <li>
-        <a routerLink="/home_usuarios" class="border">
+        <a [routerLink]="['/home_usuario']" class="border">
           <img
             src="../../../assets/img/home.svg"
             alt=""
@@ -15,7 +14,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/" class="border">
+        <a [routerLink]="['/mis_turnos']" class="border">
           <img
             src="../../../assets/img/calendar.svg"
             alt=""
@@ -24,7 +23,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/" class="border">
+        <a [routerLink]="['/especialidades']" class="border">
           <img
             src="../../../assets/img/specialties.svg"
             alt=""
@@ -33,7 +32,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/" class="border">
+        <a [routerLink]="['/']" class="border">
           <img
             src="../../../assets/img/logout.svg"
             alt="icono_salir"
@@ -45,7 +44,7 @@
     } @else if(section === 'home_medicos'){
       <ul class="d-flex flex-row justify-content-around align-items-center">
       <li>
-        <a routerLink="/home_medicos" class="border">
+        <a [routerLink]="['/home_medicos']" class="border">
           <img
             src="../../../assets/img/home.svg"
             alt=""
@@ -54,7 +53,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/" class="border">
+        <a [routerLink]="['/buscar_usuario']" class="border">
           <img
             src="../../../assets/img/list-solid.svg"
             alt=""
@@ -63,7 +62,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/" class="border">
+        <a [routerLink]="['/inbox']" class="border">
           <img
             src="../../../assets/img/inbox.svg"
             alt=""
@@ -72,7 +71,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/" class="border">
+        <a [routerLink]="['/']" class="border">
           <img
             src="../../../assets/img/logout.svg"
             alt="icono_salir"
@@ -85,16 +84,16 @@
     @else if(section === 'dashboard'){
     <ul class="d-flex flex-row justify-content-around align-items-center">
       <li>
-        <a routerLink="/dashboard" class="border">
+        <a [routerLink]="['/dashboard']" class="border">
           <img
             src="../../../assets/img/home.svg"
             alt=""
             class="border m-0 p-0"
           />
         </a>
-      </li>
+      </li> 
       <li>
-        <a routerLink="/" class="border">
+        <a [routerLink]="['/buscar']" class="border">
           <img
             src="../../../assets/img/search-folder.svg"
             alt=""
@@ -103,7 +102,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/" class="border">
+        <a [routerLink]="['/inbox']" class="border">
           <img
             src="../../../assets/img/inbox.svg"
             alt=""
@@ -112,7 +111,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/" class="border">
+        <a [routerLink]="['/']" class="border">
           <img
             src="../../../assets/img/logout.svg"
             alt="icono_salir"
@@ -121,9 +120,6 @@
         </a>
       </li>
     </ul>
-    } @else{
-    <p>Error</p>
     }
   </nav>
-</section>
 }
