--- a/frontend/agendapp/src/styles.css
+++ b/frontend/agendapp/src/styles.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 *,
 *::before,
 *::after {
@@ -13,6 +13,11 @@ body {
   background-color: #f5f5f5;
 }
 
-img{
-    border: none;
+img {
+  border: none;
+}
+
+.form-control {
+  font-size: 1.1em;
+  letter-spacing: 1px;
 }
