- parametrizacion de formularios - alerts y feedback de usuarios personalizados mediante sweetalert

--- a/frontend/agendapp/src/app/components/login/login.component.html
+++ b/frontend/agendapp/src/app/components/login/login.component.html
@@ -15,6 +15,8 @@
             placeholder="Email"
             required
             ngModel
+            maxlength="100"
+            minlength="8"
           />
         </div>
         <div class="wrapper mb-2">
@@ -23,6 +25,8 @@
             type="password"
             name="contrasenia"
             placeholder="Contraseña"
+            maxlength="100"
+            minlength="5"
             required
             ngModel
           />
@@ -81,6 +85,8 @@
             type="email"
             name="email"
             placeholder="Email"
+            maxlength="100"
+            minlength="8"
             required
             ngModel
           />
@@ -93,6 +99,8 @@
             placeholder="Contraseña"
             required
             ngModel
+            maxlength="100"
+            minlength="8"
           />
         </div>
         <!-- Checkbox para validar sesion -->
