--- a/frontend/agendapp/src/app/components/registro/registro.component.html
+++ b/frontend/agendapp/src/app/components/registro/registro.component.html
@@ -14,6 +14,8 @@
             name="nombre"
             placeholder="Nombre"
             required
+            minlength="4"
+            maxlength="100"
             [(ngModel)]="user.nombre"
           />
         </div>
@@ -24,6 +26,8 @@
             name="apellido"
             placeholder="Apellido"
             required
+            minlength="4"
+            maxlength="100"
             [(ngModel)]="user.apellido"
           />
         </div>
@@ -34,6 +38,8 @@
             name="email"
             placeholder="Email"
             required
+            minlength="5"
+            maxlength="100"
             [(ngModel)]="user.email"
           />
         </div>
@@ -44,6 +50,8 @@
             name="telefono"
             placeholder="Telefono"
             required
+            minlength="5"
+            maxlength="20"
             [(ngModel)]="user.telefono"
           />
         </div>
@@ -54,6 +62,8 @@
             name="dni"
             placeholder="Dni"
             required
+            minlength="5"
+            maxlength="20"
             [(ngModel)]="user.dni"
           />
         </div>
@@ -64,6 +74,8 @@
             name="contrasenia"
             placeholder="Contraseña"
             required
+            minlength="5"
+            maxlength="100"
             [(ngModel)]="user.contrasenia"
           />
         </div>
@@ -107,6 +119,8 @@
             name="nombre"
             placeholder="Nombre"
             required
+            minlength="4"
+            maxlength="100"
             [(ngModel)]="user.nombre"
           />
         </div>
@@ -117,6 +131,8 @@
             name="apellido"
             placeholder="Apellido"
             required
+            minlength="4"
+            maxlength="100"
             [(ngModel)]="user.apellido"
           />
         </div>
@@ -127,6 +143,8 @@
             name="email"
             placeholder="Email"
             required
+            minlength="5"
+            maxlength="100"
             [(ngModel)]="user.email"
           />
         </div>
@@ -137,6 +155,8 @@
             name="telefono"
             placeholder="Telefono"
             required
+            minlength="5"
+            maxlength="20"
             [(ngModel)]="user.telefono"
           />
         </div>
@@ -147,6 +167,8 @@
             name="dni"
             placeholder="Dni"
             required
+            minlength="5"
+            maxlength="20"
             [(ngModel)]="user.dni"
           />
         </div>
@@ -157,6 +179,8 @@
             name="contrasenia"
             placeholder="Contraseña"
             required
+            minlength="5"
+            maxlength="100"
             [(ngModel)]="user.contrasenia"
           />
         </div>
